<resources>
  <string name="app_name">FlipboardClone</string>

  <string name="hello_world">Hello world!</string>
  <string name="list">List</string>

  <string name="action_settings">Settings</string>
  <string name="img_description">my_image</string>
  <string name="newspaper">ABC paper</string>
  <string name="timer">1 min</string>
  <string name="title">this is a title</string>
  <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
  <string name="read_on_web">Read this article on the web</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
