<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/rss_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/img_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/rss_img_newspaper"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/img_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="5dp" >

                    <TextView
                        android:id="@+id/rss_tv_newspaper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newspaper" />

                    <TextView
                        android:id="@+id/rss_tv_publish_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timer" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/rss_title"
                style="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rss_content"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/lorem_ipsum"
                android:textColor="#000000" />

            <Button
                android:id="@+id/rss_btn_show_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="#cdc9c9"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/read_on_web"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>